feat |> Install mssql and create connect sql function

--- a/sqlConfigs.json
+++ b/sqlConfigs.json
@@ -1,9 +1,1 @@
-[
-    {
-        "name": "test host",
-        "host": ".",
-        "database": "SSA",
-        "username": "tfuser",
-        "password": "$transfinder2006"
-    }
-]
+[{"name":"test host","host":".","database":"SSA","username":"tfuser","password":"$transfinder2006"}]
