--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~8.1.3",
     "@angular/platform-browser-dynamic": "~8.1.3",
     "@angular/router": "~8.1.3",
+    "mssql": "^9.1.1",
     "mysql": "^2.18.1",
     "ng-zorro-antd": "^8.5.2",
     "rxjs": "~6.4.0",
